--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	background-color: #444345;
+	
 }
 
 .container{
@@ -31,10 +31,12 @@ body{
 	font-size: 16px;
 	letter-spacing: 0px;
 	font-family: Raleway-Bold;
+	cursor: pointer;
 }
 
 .navigation li:hover{
 	border-top: 3px solid #FF6033;
+	padding-top: 12px;
 }
 
 .name{
@@ -66,9 +68,14 @@ body{
 	box-shadow: 0px 2px 5px #00000080;
 	margin-top: 20px;
 	font-family: Raleway-Light;
+	cursor: pointer;
 }
 
-.maindescription{
+.mainbutton:hover{
+	background-color: #FF8255;
+}
+
+.mainparagraph{
 	letter-spacing: 0px;
 	line-height: 27px;
 	font-family: Raleway-Light;
@@ -77,7 +84,87 @@ body{
 .about{
 	width: 100%;
 	background: transparent radial-gradient(closest-side at 50% 50%, #00C4C4 0%, #00B7B7 32%, #00ADAD 68%, #009C9C 100%) 0% 0% no-repeat padding-box;
-	height: 1000px;
+	display: flex;
+	justify-content: space-around;
+}
+
+.cup{
+	margin-left: 100px;
+}
+
+.aboutheader{
+	font-size: 90px;
+	font-family: Raleway-Bold;
+	color: white;
+	margin-top: 150px;
+	margin-right: 200px;
+	margin-bottom: 0px;
+}
+
+.aboutparagraph{
+	font-size: 17px;
+	width: 500px;
+	height: 125px;
+	font-family: Raleway-Light;
+	color: white;
+	opacity: 80%;
+	line-height: 150%;
+}
+
+.services{
+	background-color: #70BFFF;
+	min-height: 790px;
+	max-height: 790px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
+	flex-wrap: wrap;
+}
+
+.panel{
+	width: 400px;
+	height: 100px;
+	margin: 10px 0 10px 265px;
+	box-shadow: 0px 2px 5px #00000080;
+	background-color: #FFFFFF;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	cursor: pointer;
+}
+
+.panel:hover{
+	width: 390px;
+	height: 90px;
+	opacity: 100%;
+	border: 5px solid #FF8255;
+	color: #FF8255;;
+}
+
+.paneltext{
+	font-size: 20px;
+	font-family: Raleway-Bold;
+	letter-spacing: 0px;
+	padding-left: 70px;
+}
+
+.paneltext1{
+	font-size: 20px;
+	font-family: Raleway-Bold;
+	letter-spacing: 0px;
+	text-align: center;
+}
+
+.panelimg{
+	padding: 28.5px;
+	border-left: 1px solid black;
+	width: 43px;
+	height: 43px;
+}
+
+.tomatoes{
+	
 }
 
 @font-face{
