Finished third page.

--- a/style.css
+++ b/style.css
@@ -163,8 +163,22 @@ body{
 	height: 43px;
 }
 
+.ourservices{
+	height: 530px;
+}
+
 .tomatoes{
-	
+	position: relative;
+	left: 70px;
+}
+
+.tomatoheader{
+	font-size: 90px;
+	font-family: Raleway-Bold;
+	color: #fff;
+	position: relative;
+	bottom: 440px;
+	right: 10px;
 }
 
 @font-face{
