--- a/style.css
+++ b/style.css
@@ -181,6 +181,129 @@ body{
 	right: 10px;
 }
 
+.gallery{
+	background-color: #FFE92F;
+	display: grid;
+	grid-template-columns: repeat(15, 100px);
+	grid-template-rows: repeat(15, 100px);
+}
+
+.galleryheader{
+	grid-row: 1 / 2;
+	grid-column: 6 / 11;
+	margin-top: 80px;
+	font-size: 90px;
+	font-family: Raleway-Bold;
+	text-align: center;
+}
+
+.gallerytext{
+	grid-row: 3 / 5;
+	grid-column: 5 / 12;
+	font-size: 17px;
+	font-family: Raleway-Light;
+	text-align: center;
+	line-height: 25px;
+	width: 630px;
+	height: 90px;
+	position: relative;
+	left: 30px;
+}
+
+.gallerycontent{
+	position: relative;
+	width: 1170px;
+	min-height: 980px;
+	margin-left: auto;
+	margin-right: auto;
+	grid-column: 2 / 15;
+	grid-row: 4/15;
+}
+
+.galleryimg1{
+	position: absolute;
+	width: 770px;
+	height: 550px;
+	left: 0px;
+	top: 30px;
+}
+
+.galleryimg1:hover{
+	transform: scale(105%);
+	transition: transform 0.1s ease-in-out;
+}
+
+.galleryimg2{
+	position: absolute;
+	width: 370px;
+	height: 260px;
+	right: 0px;
+	top: 30px;
+}
+
+.galleryimg2:hover{
+	transform: scale(110%);
+	transition: transform 0.1s ease-in-out;
+}
+
+.galleryimg3{
+	position: absolute;
+	width: 370px;
+	height: 260px;
+	right: 0px;
+	top: 320px;
+}
+
+.galleryimg3:hover{
+	transform: scale(110%);
+	transition: transform 0.1s ease-in-out;
+}
+
+.galleryimg4{
+	position: absolute;
+	width: 570px;
+	height: 400px;
+	left: 0px;
+	top: 610px;
+}
+
+.galleryimg4:hover{
+	transform: scale(108%);
+	transition: transform 0.1s ease-in-out;
+}
+
+.galleryimg5{
+	position: absolute;
+	width: 570px;
+	height: 400px;
+	right: 0px;
+	top: 610px;
+}
+
+.galleryimg5:hover{
+	transform: scale(108%);
+	transition: transform 0.1s ease-in-out;
+}
+
+.viewmore{
+	position: absolute;
+	width: 200px;
+	height: 55px;
+	background-color: #5585A2;
+	box-shadow: 0px 2px 5px #00000080;
+	left: 485px;
+	top: 1060px;
+	border: none;
+	color: #fff;
+	font-family: Raleway-Light;
+	font-size: 20px;
+	cursor: pointer;
+}
+
+.viewmore:hover{
+	background-color: #3363A0;
+}
+
 @font-face{
 	font-family: "Raleway-Bold";
 	src: url("fonts/raleway/Raleway-Bold.ttf");
