--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
 .container{
 	width: 1500px;
 	margin: 0 auto 0 auto;
+	box-shadow: 0px 0px 10px -2px rgba(219,219,219,1);
 }
 
 .main{
@@ -302,6 +303,111 @@ body{
 
 .viewmore:hover{
 	background-color: #3363A0;
+}
+
+.subscription{
+	width: 1500px;
+	height: 500px;
+	background-image: url("Assets/bg.png");
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.subheader{
+	font-size: 40px;
+	font-family: Raleway-Bold;
+	margin: 0px 0px 20px 165px;
+}
+
+.subtext{
+	font-size: 17px;
+	font-family: Raleway-Light;
+	width: 570px;
+	height: 70px;
+	margin: 22px 0px 20px 165px;
+}
+
+.subform{
+	width: 570px;
+	height: 55px;
+	opacity: 0.5;
+	font-size: 15px;
+	margin: 0px 0px 20px 165px;
+	border: 1px solid #000;
+	text-align: left;
+}
+
+.subbutton{
+	width: 170px;
+	height: 55px;
+	border: none;
+	color: #fff;
+	font-family: Raleway-Light;
+	font-size: 20px;
+	background-color: #96B92C;
+	margin-left: 24px;
+	text-align: center;
+	padding: 10px;
+	box-shadow: 0px 2px 5px #00000080;
+	margin-bottom: 60px;
+}
+
+.blog{
+	background-color: #B07CF7;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	min-height: 850px;
+}
+
+.blogheader{
+	font-size: 90px;
+	font-family: Raleway-Bold;
+	width: 100%;
+	text-align: center;
+	margin: 80px 0px 0px 0px;
+	color: #fff;
+}
+
+.blogtext{
+	font-size: 17px;
+	font-family: Raleway-Light;
+	width: 570px;
+	text-align: center;
+	margin: 25px 0px 0px 0px;
+	color: #fff;
+	position: relative;
+	bottom: 50px;
+	opacity: 1;
+}
+
+.blogimg{
+	width: 370px;
+	height: 310px;
+	margin-left: 5px;
+	margin-right: 5px;
+	position: relative;
+	bottom: 50px;
+}
+
+.blogbutton{
+	width: 200px;
+	height: 55px;
+	background-color: #F72B3B;
+	color: #fff;
+	font-size: 20px;
+	border: none;
+	position: relative;
+	font-family: Raleway-Light;
+	bottom: 50px;
+	box-shadow: 0px 2px 5px #00000080;
+}
+
+.blogspan{
+	text-align: center;
+	width: 1500px;
+	height: 310px;
 }
 
 @font-face{
