--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@ body{
 }
 
 .name{
+	width: 124px;
+	height: 94px;
 	margin-left: 100px;
 	font-size: 50px;
 	font-family: Pacifico-Regular;
@@ -73,7 +75,9 @@ body{
 }
 
 .mainbutton:hover{
-	background-color: #FF8255;
+	background-color: #EE5022;
+	color: black;
+	font-family: Raleway-Bold;
 }
 
 .mainparagraph{
@@ -84,7 +88,7 @@ body{
 
 .about{
 	width: 100%;
-	background: transparent radial-gradient(closest-side at 50% 50%, #00C4C4 0%, #00B7B7 32%, #00ADAD 68%, #009C9C 100%) 0% 0% no-repeat padding-box;
+	background-color: #00B7B7;
 	display: flex;
 	justify-content: space-around;
 }
@@ -121,6 +125,7 @@ body{
 	justify-content: center;
 	align-items: flex-start;
 	flex-wrap: wrap;
+	position: relative;
 }
 
 .panel{
@@ -136,11 +141,10 @@ body{
 }
 
 .panel:hover{
-	width: 390px;
-	height: 90px;
+	scale: 1.1;
 	opacity: 100%;
-	border: 5px solid #FF8255;
-	color: #FF8255;;
+	border: 3px solid #FF8255;
+	color: #FF8255;
 }
 
 .paneltext{
@@ -169,17 +173,18 @@ body{
 }
 
 .tomatoes{
-	position: relative;
-	left: 70px;
+	position: absolute;
+	right: 165px;
+	top: 100px;
 }
 
 .tomatoheader{
 	font-size: 90px;
 	font-family: Raleway-Bold;
 	color: #fff;
-	position: relative;
-	bottom: 440px;
-	right: 10px;
+	position: absolute;
+	right: 160px;
+	top: 190px;
 }
 
 .gallery{
@@ -329,13 +334,14 @@ body{
 }
 
 .subform{
-	width: 570px;
+	width: 555px;
 	height: 55px;
 	opacity: 0.5;
 	font-size: 15px;
 	margin: 0px 0px 20px 165px;
 	border: 1px solid #000;
 	text-align: left;
+	padding-left: 15px;
 }
 
 .subbutton{
@@ -351,6 +357,11 @@ body{
 	padding: 10px;
 	box-shadow: 0px 2px 5px #00000080;
 	margin-bottom: 60px;
+	cursor: pointer;
+}
+
+.subbutton:hover{
+	background-color: #74970A;
 }
 
 .blog{
@@ -359,6 +370,7 @@ body{
 	flex-wrap: wrap;
 	justify-content: center;
 	min-height: 850px;
+	z-index: 1;
 }
 
 .blogheader{
@@ -402,12 +414,145 @@ body{
 	font-family: Raleway-Light;
 	bottom: 50px;
 	box-shadow: 0px 2px 5px #00000080;
+	cursor: pointer;
+}
+
+.blogbutton:hover{
+	background-color: #D50919;
 }
 
 .blogspan{
 	text-align: center;
 	width: 1500px;
 	height: 310px;
+}
+
+.contact{
+	background-image: url("Assets/img.png");
+	margin-top: -52px;
+	width: 1500px;
+	height: 866px;
+	display: grid;
+	grid-template-columns: repeat(15, 100px);
+	grid-template-rows: repeat(11, 80px);
+}
+
+.contactheader{
+	font-size: 90px;
+	font-family: Raleway-Bold;
+	margin: 80px 0px 0px 0px;
+	grid-row: 1 / 3;
+	grid-column: 7 / 11;
+	position: relative;
+	right: 20px;
+	color: #262626;
+}
+
+.contacttext{
+	font-size: 17px;
+	font-family: Raleway-Light;
+	color: #262626;
+	text-align: center;
+	width: 350px;
+	margin: 0px;
+	grid-row: 3 / 4;
+	grid-column: 7 / 11;
+	position: relative;
+	right: 20px;
+	top: 50px;
+}
+
+.contactform{
+	grid-row: 5 / 10;
+	grid-column: 2 / 8;
+	position: relative;
+	left: 65px;
+	bottom: 30px;
+}
+
+.formheader{
+	width: 495px;
+	height: 50px;
+	background-color: #00C4C4;
+	border: none;
+	border-left: 5px solid #355B82;
+	margin-bottom: 15px;
+}
+
+.formtitle{
+	color: #fff;
+	font-size: 15px;
+	font-family: Raleway-Bold;
+	position: relative;
+	top: 17px;
+	bottom: 15px;
+	left: 15px;
+	opacity: 0.9;
+}
+
+.data{
+	width: 480px;
+	height: 50px;
+	background-color: #00C4C4;
+	opacity: 0.5;
+	border: none;
+	color: #fff;
+	margin-bottom: 15px;
+	padding: 0px 0px 0px 20px;
+}
+
+.message{
+	width: 480px;
+	height: 50px;
+	background-color: #00C4C4;
+	opacity: 0.5;
+	border: none;
+	color: #fff;
+	margin-bottom: 15px;
+	padding: 0px 0px 200px 20px;
+}
+
+.address{
+	grid-row: 5 / 7;
+	grid-column: 10 / 15;
+	position: relative;
+	right: 60px;
+}
+
+.addressheader{
+	font-size: 17px;
+	font-family: Raleway-Bold;
+	margin: 0px;
+}
+
+.addresstext{
+	font-size: 20px;
+	font-family: Raleway-Light;
+	margin: 0px;
+}
+
+footer{
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	background-color: #262626;
+}
+
+.footertext{
+	font-size: 15px;
+	font-family: Raleway-Light;
+	color: #B9B9B9;
+}
+
+.love{
+	font-family: Raleway-Bold;
+	font-size: 15px;
+	color: #FF2B58;
+}
+
+footer .name{
+	color: #B9B9B9;
+	margin: 0px;
 }
 
 @font-face{
