--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
 	width: 100%;
 	background-image: url("Assets/img-2.png"); 
 	min-height: 1000px;
+	position: relative;
 }
 
 .top{
@@ -43,7 +44,7 @@ body{
 .name{
 	width: 124px;
 	height: 94px;
-	margin-left: 100px;
+	margin-left: 165px;
 	font-size: 50px;
 	font-family: Pacifico-Regular;
 }
@@ -51,8 +52,8 @@ body{
 .maincontent{
 	width: 370px;
 	height: 200px;
-	margin-left: 100px;
-	margin-top: 250px;
+	margin-left: 165px;
+	margin-top: 180px;
 }
 
 .mainheader{
@@ -86,6 +87,12 @@ body{
 	font-family: Raleway-Light;
 }
 
+.scroll{
+	position: absolute;
+	left: 750px;
+	bottom: 78px;
+}
+
 .about{
 	width: 100%;
 	background-color: #00B7B7;
@@ -109,11 +116,12 @@ body{
 .aboutparagraph{
 	font-size: 17px;
 	width: 500px;
-	height: 125px;
 	font-family: Raleway-Light;
 	color: white;
 	opacity: 80%;
 	line-height: 150%;
+	margin-top: 15px;
+	margin-bottom: 0px;
 }
 
 .services{
@@ -141,10 +149,8 @@ body{
 }
 
 .panel:hover{
-	scale: 1.1;
-	opacity: 100%;
-	border: 3px solid #FF8255;
 	color: #FF8255;
+	box-shadow: 0px 1px 0px 6px #FF8255;
 }
 
 .paneltext{
@@ -232,6 +238,7 @@ body{
 	height: 550px;
 	left: 0px;
 	top: 30px;
+	box-shadow: 0px 5px 20px -10px rgba(0,0,0,1);
 }
 
 .galleryimg1:hover{
@@ -245,6 +252,7 @@ body{
 	height: 260px;
 	right: 0px;
 	top: 30px;
+	box-shadow: 0px 5px 20px -10px rgba(0,0,0,1);
 }
 
 .galleryimg2:hover{
@@ -258,6 +266,7 @@ body{
 	height: 260px;
 	right: 0px;
 	top: 320px;
+	box-shadow: 0px 5px 20px -10px rgba(0,0,0,1);
 }
 
 .galleryimg3:hover{
@@ -271,6 +280,7 @@ body{
 	height: 400px;
 	left: 0px;
 	top: 610px;
+	box-shadow: 0px 5px 20px -10px rgba(0,0,0,1);
 }
 
 .galleryimg4:hover{
@@ -284,6 +294,8 @@ body{
 	height: 400px;
 	right: 0px;
 	top: 610px;
+	padding: 0px;
+	box-shadow: 0px 5px 20px -10px rgba(0,0,0,1);
 }
 
 .galleryimg5:hover{
@@ -298,7 +310,7 @@ body{
 	background-color: #5585A2;
 	box-shadow: 0px 2px 5px #00000080;
 	left: 485px;
-	top: 1060px;
+	bottom: -20px;
 	border: none;
 	color: #fff;
 	font-family: Raleway-Light;
@@ -322,7 +334,7 @@ body{
 .subheader{
 	font-size: 40px;
 	font-family: Raleway-Bold;
-	margin: 0px 0px 20px 165px;
+	margin: 0px 0px 0px 165px;
 }
 
 .subtext{
@@ -330,7 +342,7 @@ body{
 	font-family: Raleway-Light;
 	width: 570px;
 	height: 70px;
-	margin: 22px 0px 20px 165px;
+	margin: 22px 0px 0px 165px;
 }
 
 .subform{
@@ -536,6 +548,7 @@ footer{
 	justify-content: space-around;
 	align-items: center;
 	background-color: #262626;
+	height: 90px;
 }
 
 .footertext{
@@ -553,6 +566,9 @@ footer{
 footer .name{
 	color: #B9B9B9;
 	margin: 0px;
+	font-size: 25px;
+	width: 62px;
+	height: 46px;
 }
 
 @font-face{
