--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body{
-	
+	padding: 0px;
+	margin: 0px;
 }
 
 .container{
-	width: 1500px;
+	max-width: 1500px;
 	margin: 0 auto 0 auto;
 	box-shadow: 0px 0px 10px -2px rgba(219,219,219,1);
 }
@@ -25,6 +26,16 @@ body{
 	justify-content: row;
 	margin-top: 40px;
 	margin-right: 120px;
+}
+
+.navigation li a:link{
+	color: black;
+	text-decoration: none;
+}
+
+.navigation li a:visited{
+	color: black;
+	text-decoration: none;
 }
 
 .navigation li{
@@ -49,20 +60,20 @@ body{
 	font-family: Pacifico-Regular;
 }
 
-.maincontent{
+.main-content{
 	width: 370px;
 	height: 200px;
 	margin-left: 165px;
 	margin-top: 180px;
 }
 
-.mainheader{
+.main-header{
 	font-size: 60px;
 	font-family: Raleway-Heavy;
 	margin: 0;
 }
 
-.mainbutton{
+.main-button{
 	width: 200px;
 	height: 55px;
 	background-color: #FF6033;
@@ -73,15 +84,16 @@ body{
 	margin-top: 20px;
 	font-family: Raleway-Light;
 	cursor: pointer;
+	transition: all 0.1s ease-in-out;
 }
 
-.mainbutton:hover{
+.main-button:hover{
 	background-color: #EE5022;
 	color: black;
 	font-family: Raleway-Bold;
 }
 
-.mainparagraph{
+.main-paragraph{
 	letter-spacing: 0px;
 	line-height: 27px;
 	font-family: Raleway-Light;
@@ -104,7 +116,7 @@ body{
 	margin-left: 100px;
 }
 
-.aboutheader{
+.about-header{
 	font-size: 90px;
 	font-family: Raleway-Bold;
 	color: white;
@@ -113,7 +125,7 @@ body{
 	margin-bottom: 0px;
 }
 
-.aboutparagraph{
+.about-paragraph{
 	font-size: 17px;
 	width: 500px;
 	font-family: Raleway-Light;
@@ -146,6 +158,7 @@ body{
 	justify-content: space-between;
 	align-items: center;
 	cursor: pointer;
+	transition: all 0.2s ease-in-out;
 }
 
 .panel:hover{
@@ -153,28 +166,28 @@ body{
 	box-shadow: 0px 1px 0px 6px #FF8255;
 }
 
-.paneltext{
+.panel-text{
 	font-size: 20px;
 	font-family: Raleway-Bold;
 	letter-spacing: 0px;
 	padding-left: 70px;
 }
 
-.paneltext1{
+.panel-text1{
 	font-size: 20px;
 	font-family: Raleway-Bold;
 	letter-spacing: 0px;
 	text-align: center;
 }
 
-.panelimg{
+.panel-img{
 	padding: 28.5px;
 	border-left: 1px solid black;
 	width: 43px;
 	height: 43px;
 }
 
-.ourservices{
+.our-services{
 	height: 530px;
 }
 
@@ -184,7 +197,7 @@ body{
 	top: 100px;
 }
 
-.tomatoheader{
+.tomato-header{
 	font-size: 90px;
 	font-family: Raleway-Bold;
 	color: #fff;
@@ -200,7 +213,7 @@ body{
 	grid-template-rows: repeat(15, 100px);
 }
 
-.galleryheader{
+.gallery-header{
 	grid-row: 1 / 2;
 	grid-column: 6 / 11;
 	margin-top: 80px;
@@ -209,7 +222,7 @@ body{
 	text-align: center;
 }
 
-.gallerytext{
+.gallery-text{
 	grid-row: 3 / 5;
 	grid-column: 5 / 12;
 	font-size: 17px;
@@ -222,7 +235,7 @@ body{
 	left: 30px;
 }
 
-.gallerycontent{
+.gallery-content{
 	position: relative;
 	width: 1170px;
 	min-height: 980px;
@@ -232,63 +245,63 @@ body{
 	grid-row: 4/15;
 }
 
-.galleryimg1{
+.gallery-img1{
 	position: absolute;
 	width: 770px;
 	height: 550px;
 	left: 0px;
 	top: 30px;
 	box-shadow: 0px 5px 20px -10px rgba(0,0,0,1);
+	transition: transform 0.2s ease-in-out;
 }
 
-.galleryimg1:hover{
+.gallery-img1:hover{
 	transform: scale(105%);
-	transition: transform 0.1s ease-in-out;
 }
 
-.galleryimg2{
+.gallery-img2{
 	position: absolute;
 	width: 370px;
 	height: 260px;
 	right: 0px;
 	top: 30px;
 	box-shadow: 0px 5px 20px -10px rgba(0,0,0,1);
+	transition: transform 0.2s ease-in-out;
 }
 
-.galleryimg2:hover{
+.gallery-img2:hover{
 	transform: scale(110%);
-	transition: transform 0.1s ease-in-out;
 }
 
-.galleryimg3{
+.gallery-img3{
 	position: absolute;
 	width: 370px;
 	height: 260px;
 	right: 0px;
 	top: 320px;
 	box-shadow: 0px 5px 20px -10px rgba(0,0,0,1);
+	transition: transform 0.2s ease-in-out;
 }
 
-.galleryimg3:hover{
+.gallery-img3:hover{
 	transform: scale(110%);
-	transition: transform 0.1s ease-in-out;
 }
 
-.galleryimg4{
+.gallery-img4{
 	position: absolute;
 	width: 570px;
 	height: 400px;
 	left: 0px;
 	top: 610px;
 	box-shadow: 0px 5px 20px -10px rgba(0,0,0,1);
+	transition: transform 0.2s ease-in-out;
 }
 
-.galleryimg4:hover{
+.gallery-img4:hover{
 	transform: scale(108%);
-	transition: transform 0.1s ease-in-out;
 }
 
-.galleryimg5{
+.gallery-img5{
 	position: absolute;
 	width: 570px;
 	height: 400px;
@@ -296,14 +309,14 @@ body{
 	top: 610px;
 	padding: 0px;
 	box-shadow: 0px 5px 20px -10px rgba(0,0,0,1);
+	transition: transform 0.2s ease-in-out;
 }
 
-.galleryimg5:hover{
+.gallery-img5:hover{
 	transform: scale(108%);
-	transition: transform 0.1s ease-in-out;
 }
 
-.viewmore{
+.view-more{
 	position: absolute;
 	width: 200px;
 	height: 55px;
@@ -316,9 +329,10 @@ body{
 	font-family: Raleway-Light;
 	font-size: 20px;
 	cursor: pointer;
+	transition: all 0.1s ease-in-out;
 }
 
-.viewmore:hover{
+.view-more:hover{
 	background-color: #3363A0;
 }
 
@@ -331,13 +345,13 @@ body{
 	justify-content: center;
 }
 
-.subheader{
+.sub-header{
 	font-size: 40px;
 	font-family: Raleway-Bold;
 	margin: 0px 0px 0px 165px;
 }
 
-.subtext{
+.sub-text{
 	font-size: 17px;
 	font-family: Raleway-Light;
 	width: 570px;
@@ -345,7 +359,7 @@ body{
 	margin: 22px 0px 0px 165px;
 }
 
-.subform{
+.sub-form{
 	width: 555px;
 	height: 55px;
 	opacity: 0.5;
@@ -356,7 +370,7 @@ body{
 	padding-left: 15px;
 }
 
-.subbutton{
+.sub-button{
 	width: 170px;
 	height: 55px;
 	border: none;
@@ -370,9 +384,10 @@ body{
 	box-shadow: 0px 2px 5px #00000080;
 	margin-bottom: 60px;
 	cursor: pointer;
+	transition: all 0.1s ease-in-out;
 }
 
-.subbutton:hover{
+.sub-button:hover{
 	background-color: #74970A;
 }
 
@@ -385,7 +400,7 @@ body{
 	z-index: 1;
 }
 
-.blogheader{
+.blog-header{
 	font-size: 90px;
 	font-family: Raleway-Bold;
 	width: 100%;
@@ -394,7 +409,7 @@ body{
 	color: #fff;
 }
 
-.blogtext{
+.blog-text{
 	font-size: 17px;
 	font-family: Raleway-Light;
 	width: 570px;
@@ -406,7 +421,7 @@ body{
 	opacity: 1;
 }
 
-.blogimg{
+.blog-img{
 	width: 370px;
 	height: 310px;
 	margin-left: 5px;
@@ -415,7 +430,7 @@ body{
 	bottom: 50px;
 }
 
-.blogbutton{
+.blog-button{
 	width: 200px;
 	height: 55px;
 	background-color: #F72B3B;
@@ -427,13 +442,14 @@ body{
 	bottom: 50px;
 	box-shadow: 0px 2px 5px #00000080;
 	cursor: pointer;
+	transition: all 0.1s ease-in-out;
 }
 
-.blogbutton:hover{
+.blog-button:hover{
 	background-color: #D50919;
 }
 
-.blogspan{
+.blog-span{
 	text-align: center;
 	width: 1500px;
 	height: 310px;
@@ -449,7 +465,7 @@ body{
 	grid-template-rows: repeat(11, 80px);
 }
 
-.contactheader{
+.contact-header{
 	font-size: 90px;
 	font-family: Raleway-Bold;
 	margin: 80px 0px 0px 0px;
@@ -460,7 +476,7 @@ body{
 	color: #262626;
 }
 
-.contacttext{
+.contact-text{
 	font-size: 17px;
 	font-family: Raleway-Light;
 	color: #262626;
@@ -474,7 +490,7 @@ body{
 	top: 50px;
 }
 
-.contactform{
+.contact-form{
 	grid-row: 5 / 10;
 	grid-column: 2 / 8;
 	position: relative;
@@ -482,7 +498,7 @@ body{
 	bottom: 30px;
 }
 
-.formheader{
+.form-header{
 	width: 495px;
 	height: 50px;
 	background-color: #00C4C4;
@@ -491,7 +507,7 @@ body{
 	margin-bottom: 15px;
 }
 
-.formtitle{
+.form-title{
 	color: #fff;
 	font-size: 15px;
 	font-family: Raleway-Bold;
@@ -500,6 +516,17 @@ body{
 	bottom: 15px;
 	left: 15px;
 	opacity: 0.9;
+}
+
+.data1{
+	width: 480px;
+	height: 50px;
+	background-color: #00C4C4;
+	opacity: 0.5;
+	border: none;
+	color: #fff;
+	margin-bottom: 15px;
+	padding: 0px 0px 0px 20px;
 }
 
 .data{
@@ -531,13 +558,13 @@ body{
 	right: 60px;
 }
 
-.addressheader{
+.address-header{
 	font-size: 17px;
 	font-family: Raleway-Bold;
 	margin: 0px;
 }
 
-.addresstext{
+.address-text{
 	font-size: 20px;
 	font-family: Raleway-Light;
 	margin: 0px;
@@ -551,7 +578,7 @@ footer{
 	height: 90px;
 }
 
-.footertext{
+.footer-text{
 	font-size: 15px;
 	font-family: Raleway-Light;
 	color: #B9B9B9;
