second part of fixes

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
 	background-image: url("Assets/img-2.png"); 
 	min-height: 1000px;
 	position: relative;
+	height: 100vh
 }
 
 .top{
@@ -428,6 +429,14 @@ body{
 	margin-right: 5px;
 	position: relative;
 	bottom: 50px;
+	transition: all 0.3s ease-in-out;
+	cursor: pointer;
+	padding: 5px 5px;
+}
+
+.blog-img:hover{
+	opacity: 0.8;
+	background-color: #A06BE6;
 }
 
 .blog-button{
@@ -463,6 +472,8 @@ body{
 	display: grid;
 	grid-template-columns: repeat(15, 100px);
 	grid-template-rows: repeat(11, 80px);
+	background-size: 105%;
+	background-position: center;
 }
 
 .contact-header{
@@ -519,14 +530,16 @@ body{
 }
 
 .data1{
-	width: 480px;
+	width: 475px;
 	height: 50px;
 	background-color: #00C4C4;
-	opacity: 0.5;
+	opacity: 0.9;
 	border: none;
 	color: #fff;
 	margin-bottom: 15px;
 	padding: 0px 0px 0px 20px;
+	border-left: 5px solid #355B82;
+	font-family: Raleway-Bold;
 }
 
 .data{
@@ -538,6 +551,7 @@ body{
 	color: #fff;
 	margin-bottom: 15px;
 	padding: 0px 0px 0px 20px;
+	font-family: Raleway-Light;
 }
 
 .message{
